--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer text-white">
+<div class="contai text-white">
     <div class="container">
         <h3 class="text-center">AutoGather</h3>
         <div class="row justify-content-center">
@@ -21,4 +21,4 @@
     <article class="p-fot">
         <p>© Derechos de autor 2023. Hecho por daniel nuñez</p>
     </article>
-</footer>
+</div>
