--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -4,61 +4,76 @@ nav {
 .navbar-brand {
   color: white !important;
 }
-article {
+section {
   display: flex;
   margin-top: 20px;
   margin-bottom: 0%;
   justify-content: space-around;
   align-items: center;
 }
-article img {
+section img {
   width: 50%;
 }
-
-.footer {
-  background-color: black !important;
+article {
+  display: flex;
+  flex-direction: column;
   padding: 20px;
-  margin-top: 35vh;
-  height: auto;
-  text-align: center;
+}
+form {
+  display: flex;
+  flex-direction: column;
+}
+form input {
+  margin-bottom: 2%;
+}
+form button {
+  width: 40%;
+  color: white;
+  background-color: black;
 }
 
-.footer .container {
+.contai {
+  background-color: black !important;
+  padding: 20px;
+  position: absolute;
+  height: auto;
+  margin-top: 12%;
+  margin-bottom: 0%;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 0%;
+}
+body {
+  height: auto;
+}
+
+.contai .container {
   max-width: 1200px;
   margin: 0 auto;
 }
 
-.footer .row {
+.contai .row {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.footer .col-md-12 {
-  flex: 0 0 100%;
-  max-width: 100%;
-}
-
-.footer ul {
+.contai ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.footer li {
+.contai li {
   margin-right: 20px;
 }
 
-.footer a {
+.contai a {
   color: #fff;
   text-decoration: none;
 }
 
-.footer a:hover {
-  color: #ccc;
-}
-
-.footer .fab {
+.contai .fab {
   font-size: 24px;
   margin-right: 10px;
 }
@@ -98,4 +113,7 @@ nav ul li a {
   text-decoration: none;
   border-radius: 50% 10% 50% 10% / 10% 50% 10% 50%;
   cursor: pointer;
+}
+table {
+  width: 40%;
 }
