--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,15 +20,23 @@
     {% block navbar %}
     {% include "nav.html" %}
     {% endblock navbar %}
-    <article>
-        <img src="{{ url_for('video') }}" alt="aaa">
+    <section>
+        <article>
+            <img id=imagen src="{{ url_for('video') }}" alt="aaa">
+            <form action="/upload_video" method="post" enctype="multipart/form-data">
+                <input type="file" name="video" accept="video/*">
+                <button type="submit">Subir video</button>
+            </form>
+        </article>
         {% block table %}
         {% include "table.html" %}
         {% endblock table %}
-    </article>
+    </section>
     {% block footer %}
     {% include "footer.html" %}
     {% endblock footer %}
+
 </body>
+
 
 </html>
