--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -37,9 +37,9 @@ form button {
   padding: 20px;
   position: absolute;
   height: auto;
-  margin-top: 12%;
   margin-bottom: 0%;
   width: 100%;
+  top: 80%;
   text-align: center;
   margin-bottom: 0%;
 }
