--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -4,6 +4,21 @@ nav {
 .navbar-brand {
   color: white !important;
 }
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: black;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
 section {
   display: flex;
   margin-top: 20px;
