--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="{{url_for('static', filename = 'style/style.css')}}" />
+    <link rel="stylesheet" href="{{url_for('static', filename = 'style/style_main.css')}}" />
     <link rel="shortcut icon" href="app/auth/templates/favicon.icofavicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -13,6 +14,9 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Contrail+One&display=swap" rel="stylesheet">
 
 </head>
 
@@ -20,6 +24,39 @@
     {% block navbar %}
     {% include "nav.html" %}
     {% endblock navbar %}
+
+
+    <main>
+        <section class="container-fluid">
+            <article class="container-red">
+                <h4>
+                    <h1>¿Quienes somos?</h1>
+                </h4>
+                <p>Somos Daniel Nuñez y Benjamin Orellana, estudiantes de enseñanza media especializados en técnico en
+                    programación. Nos apasiona la tecnología y estamos comprometidos con el desarrollo de soluciones
+                    innovadoras. Nuestro proyecto se centra en la recolección de información de vehículos, creando una
+                    base de datos robusta y eficiente. Utilizamos Python, MySQL, OpenCV y TensorFlow para analizar y
+                    procesar la información. Nuestro objetivo es proporcionar una herramienta útil y accesible para la
+                    gestión de flotas y la investigación en automoción.</p>
+            </article>
+            <article class="container-blue">
+                <h4>
+                    <h1>Descripcion</h1>
+                </h4>
+                <p> AutoGather es una plataforma web avanzada diseñada para analizar videos de vehículos utilizando
+                    inteligencia artificial. La página permite a los usuarios subir videos de tráfico, y mediante un
+                    modelo de IA preentrenado, extrae información detallada sobre los vehículos detectados, incluyendo
+                    el modelo, color y la patente.
+
+                    Características Principales:
+
+                    Subida de Videos:
+                    Los usuarios pueden subir videos directamente a la plataforma.
+                    Soporte para múltiples formatos de video.
+                    Interfaz intuitiva para una carga rápida y sencilla.</p>
+            </article>
+        </section>
+    </main>
 </body>
 
 </html>
