--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="{{url_for('static', filename = 'style/style.css')}}" />
     <link rel="stylesheet" href="{{url_for('static', filename = 'style/style_main.css')}}" />
     <link rel="shortcut icon" href="app/auth/templates/favicon.icofavicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,13 +16,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Contrail+One&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-image: url("{{ url_for('static', filename='/img/MATRICULAAUTO-removebg-preview.png') }}") !important;
+            background-size: 45% !important;
+            background-position: center !important;
+            background-repeat: no-repeat !important;
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #000000 !important;
+        }
+    </style>
 
 </head>
 
 <body>
-    {% block navbar %}
-    {% include "nav.html" %}
-    {% endblock navbar %}
 
 
     <main>
