--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="{{url_for('static', filename = 'style/style_login.css')}}" />
+
 </head>
 
 <body>
+    <div class="contenedor" id="formContainer">
+        <form id="mainForm">
+            <input type="text" id="usuario" name="usuario" placeholder="Ingresa tu nombre" required>
+            <input type="email" id="email" name="correo" placeholder="Ingresa tu correo" required>
+            <input type="password" id="contraseña" name="contraseña" placeholder="Ingresa tu contraseña" required>
 
+            <section class="mostrar">
+                <label class="lbel" for="checkbox">Mostrar contraseña</label>
+                <input type="checkbox" id="checkbox" name="checkbox">
+            </section>
+
+            <button type="button" class="submit" id="submitGeneral">Enviar</button>
+
+            <section class="botones">
+                <button type="button" class="btn" id="loginBtn">Login</button>
+                <button type="button" class="btn" id="registerBtn">Register</button>
+            </section>
+        </form>
+    </div>
 </body>
+<script src="{{url_for('static', filename = 'js/script_login.js')}}"></script>
 
 </html>
