Se logro crear la session del usuario

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -43,7 +43,7 @@
         <section class="container-fluid">
             <article class="container-red">
                 <h4>
-                    <h1>¿Quienes somos?</h1>
+                    <p>¿Quienes somos?</p>
                 </h4>
                 <p>Somos Daniel Nuñez y Benjamin Orellana, estudiantes de enseñanza media especializados en técnico en
                     programación. Nos apasiona la tecnología y estamos comprometidos con el desarrollo de soluciones
