--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -1,47 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% block title %}
+Inicio
+{% endblock %}
+{% block head %}
+<link rel="stylesheet" href="{{url_for('static', filename = 'style/style.css')}}" />
+<link rel="shortcut icon" href="app/auth/templates/favicon.icofavicon.ico" type="image/x-icon">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+<link rel="stylesheet" href="{{url_for('static', filename = 'style/nav_style.css')}}" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Contrail+One&display=swap" rel="stylesheet">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{{url_for('static', filename = 'style/style.css')}}" />
-    <link rel="shortcut icon" href="app/auth/templates/favicon.icofavicon.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-    <link rel="stylesheet" href="{{url_for('static', filename = 'style/nav_style.css')}}" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Contrail+One&display=swap" rel="stylesheet">
-
-
-</head>
-
-<body>
-    {% block navbar %}
-    {% include "nav.html" %}
-    {% endblock navbar %}
-    <section>
-        <article>
-            <img id=imagen src="{{ url_for('video') }}" alt="aaa">
-            <form action="/upload_video" method="post" enctype="multipart/form-data">
-                <input type="file" name="video" accept="video/*">
-                <button type="submit">Subir video</button>
-            </form>
-        </article>
-        {% block table %}
-        {% include "table.html" %}
-        {% endblock table %}
-    </section>
-    {% block footer %}
-    {% include "footer.html" %}
-    {% endblock footer %}
-
-</body>
-
-
-</html>
+{% endblock %}
+{% block main %}
+<section>
+    <article>
+        <img id=imagen src="{{ url_for('video') }}" alt="aaa">
+        <form action="/upload_video" method="post" enctype="multipart/form-data">
+            <input type="file" name="video" accept="video/*">
+            <button type="submit">Subir video</button>
+        </form>
+    </article>
+    {% block table %}
+    {% include "table.html" %}
+    {% endblock table %}
+</section>
+{% endblock %}
