--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,75 +1,79 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% block title %}
+Inicio
+{% endblock %}
+{% block head %}
+<link rel="stylesheet" href="{{url_for('static', filename = 'style/style_main.css')}}" />
+<style>
+    section {
+        background-image: url("{{ url_for('static', filename='/img/MATRICULAAUTO-removebg-preview.png') }}") !important;
+        background-size: 45% !important;
+        background-position: center !important;
+        background-repeat: no-repeat !important;
+        height: 100vh;
+        margin: 0;
+        display: flex;
+        align-items: center;
+        background-color: #000000 !important;
+    }
+</style>
+<link rel="stylesheet" href="{{url_for('static', filename = 'style/nav_style.css')}}" />
+<link rel="shortcut icon" href="app/auth/templates/favicon.icofavicon.ico" type="image/x-icon">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Contrail+One&display=swap" rel="stylesheet">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{{url_for('static', filename = 'style/style_main.css')}}" />
-    <link rel="shortcut icon" href="app/auth/templates/favicon.icofavicon.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Contrail+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'style/nav_style.css')}}" />
-    <style>
-        main {
-            background-image: url("{{ url_for('static', filename='/img/MATRICULAAUTO-removebg-preview.png') }}") !important;
-            background-size: 45% !important;
-            background-position: center !important;
-            background-repeat: no-repeat !important;
-            height: 100vh;
-            margin: 0;
-            display: flex;
-            align-items: center;
-            background-color: #000000 !important;
-        }
-    </style>
+{% endblock %}
+{% block main %}
+<style>
+    section {
+        background-image: url("{{ url_for('static', filename='/img/MATRICULAAUTO-removebg-preview.png') }}") !important;
+        background-size: 45% !important;
+        background-position: center !important;
+        background-repeat: no-repeat !important;
+        height: 100vh;
+        margin: 0;
+        display: flex;
+        align-items: center;
+        background-color: #000000 !important;
+    }
+</style>
 
-</head>
+<section>
+    <article class="container-fluid">
+        <div class="container-red">
+            <h4>
+                <p>¿Quienes somos?</p>
+            </h4>
+            <p>Somos Daniel Nuñez y Benjamin Orellana, estudiantes de enseñanza media especializados en técnico en
+                programación. Nos apasiona la tecnología y estamos comprometidos con el desarrollo de soluciones
+                innovadoras. Nuestro proyecto se centra en la recolección de información de vehículos, creando una
+                base de datos robusta y eficiente. Utilizamos Python, MySQL, OpenCV y TensorFlow para analizar y
+                procesar la información. Nuestro objetivo es proporcionar una herramienta útil y accesible para la
+                gestión de flotas y la investigación en automoción.</p>
+        </div>
+        <div class="container-blue">
+            <h4>
+                <h1>Descripción</h1>
+            </h4>
+            <p> AutoGather es una plataforma web avanzada diseñada para analizar videos de vehículos utilizando
+                inteligencia artificial. La página permite a los usuarios subir videos de tráfico, y mediante un
+                modelo de IA preentrenado, extrae información detallada sobre los vehículos detectados, incluyendo
+                el modelo, color y la patente.
 
-<body>
+                Características Principales:
 
-
-    {% block navbar %}
-    {% include "nav.html" %}
-    {% endblock navbar %}
-    <main>
-        <section class="container-fluid">
-            <article class="container-red">
-                <h4>
-                    <p>¿Quienes somos?</p>
-                </h4>
-                <p>Somos Daniel Nuñez y Benjamin Orellana, estudiantes de enseñanza media especializados en técnico en
-                    programación. Nos apasiona la tecnología y estamos comprometidos con el desarrollo de soluciones
-                    innovadoras. Nuestro proyecto se centra en la recolección de información de vehículos, creando una
-                    base de datos robusta y eficiente. Utilizamos Python, MySQL, OpenCV y TensorFlow para analizar y
-                    procesar la información. Nuestro objetivo es proporcionar una herramienta útil y accesible para la
-                    gestión de flotas y la investigación en automoción.</p>
-            </article>
-            <article class="container-blue">
-                <h4>
-                    <h1>Descripción</h1>
-                </h4>
-                <p> AutoGather es una plataforma web avanzada diseñada para analizar videos de vehículos utilizando
-                    inteligencia artificial. La página permite a los usuarios subir videos de tráfico, y mediante un
-                    modelo de IA preentrenado, extrae información detallada sobre los vehículos detectados, incluyendo
-                    el modelo, color y la patente.
-
-                    Características Principales:
-
-                    Subida de Videos:
-                    Los usuarios pueden subir videos directamente a la plataforma.
-                    Soporte para múltiples formatos de video.
-                    Interfaz intuitiva para una carga rápida y sencilla.</p>
-            </article>
-        </section>
-    </main>
-</body>
-
-</html>
+                Subida de Videos:
+                Los usuarios pueden subir videos directamente a la plataforma.
+                Soporte para múltiples formatos de video.
+                Interfaz intuitiva para una carga rápida y sencilla.</p>
+        </div>
+    </article>
+</section>
+{% endblock %}
