--- a/app/templates/iniciar-sesion.html
+++ b/app/templates/iniciar-sesion.html
@@ -1,44 +1,46 @@
-<!DOCTYPE html>
-<html lang="es">
+{% extends "base.html" %}
+{% block title %}
+Iniciar sesion
+{% endblock %}
+{% block head %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='style/style_login.css')}}" />
-    <link rel="stylesheet" href="{{url_for('static', filename='style/nav_style.css')}}" />
-    <link rel="shortcut icon" href="app/auth/templates/favicon.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Contrail+One&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="{{url_for('static', filename='style/style_login.css')}}" />
+<link rel="stylesheet" href="{{url_for('static', filename='style/nav_style.css')}}" />
+<link rel="shortcut icon" href="app/auth/templates/favicon.ico" type="image/x-icon">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Contrail+One&display=swap" rel="stylesheet">
 </head>
+{% endblock head %}
 
-<body>
-    {% block navbar %}
-    {% include "nav.html" %}
-    {% endblock navbar %}
-    <div class="contenedor" id="formContainer">
-        <form id="loginForm" action="/login/singin" method="POST">
 
-            <input type="email" id="loginEmail" name="email" placeholder="Ingresa tu correo" required>
-            <input type="password" id="loginPassword" name="password" placeholder="Ingresa tu contraseña" required>
-            <section class="mostrar">
-                <label class="lbel" for="loginCheckbox">Mostrar contraseña</label>
-                <input type="checkbox" id="loginCheckbox" onclick="togglePasswordVisibility('loginPassword')">
-            </section>
-            <input type="submit" class="submit">
-            <section class="botones">
-                <a href="/iniciar_sesion" class="btn" id="loginBtnFromLogin">Login</a>
-                <a href="/login" class="btn" id="registerBtnFromLogin">Register</a>
-            </section>
-        </form>
-    </div>
-</body>
+{% block main %}
+<div class="contenedor" id="formContainer">
 
-</html>
+    <form id="loginForm" action="/login/singin" method="POST">
+
+        <input type="email" id="loginEmail" name="email" placeholder="Ingresa tu correo" required>
+        <input type="password" id="loginPassword" name="password" placeholder="Ingresa tu contraseña" required>
+        <input type="submit" class="submit">
+        <section class="botones">
+            <a href="/iniciar_sesion" class="btn" id="loginBtnFromLogin">Login</a>
+            <a href="/login" class="btn" id="registerBtnFromLogin">Register</a>
+        </section>
+    </form>
+</div>
+{% if login_errors %}
+<div class="alert alert-danger">
+    <ul>
+        {% for error in login_errors %}
+        <li>{{ error }}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
+{% endblock main %}
