--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,42 +1,37 @@
-<!DOCTYPE html>
-<html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='style/style_login.css')}}" />
-    <link rel="stylesheet" href="{{url_for('static', filename='style/nav_style.css')}}" />
-    <link rel="shortcut icon" href="app/auth/templates/favicon.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Contrail+One&display=swap" rel="stylesheet">
-</head>
-
-<body>
-    {% block navbar %}
-    {% include "nav.html" %}
-    {% endblock navbar %}
-    <div class="contenedor" id="formContainer">
-        <form id="mainForm" action="/login/register" method="post">
-            <input type="text" id="usuario" name="name" placeholder="Ingresa tu nombre" required>
-            <input type="email" id="email" name="email" placeholder="Ingresa tu correo" required>
-            <input type="password" id="contraseña" name="pass" placeholder="Ingresa tu contraseña" required>
-            <section class="mostrar">
-                <label class="lbel" for="checkbox">Mostrar contraseña</label>
-                <input type="checkbox" id="checkbox" name="checkbox">
-            </section>
-            <input type="submit" class="submit">
-            <hr>
-            <section class="botones">
-                <a href="/iniciar_sesion" class="btn" id="loginBtnFromLogin">Login</a>
-                <a href="/login" class="btn" id="registerBtnFromLogin">Register</a>
-            </section>
-        </form>
-    </div>
-</body>
-
-</html>
+{% extends "base.html" %}
+{% block title %}
+Login
+{% endblock %}
+{% block head %}
+<link rel="stylesheet" href="{{url_for('static', filename='style/style_login.css')}}" />
+<link rel="stylesheet" href="{{url_for('static', filename='style/nav_style.css')}}" />
+<link rel="shortcut icon" href="app/auth/templates/favicon.ico" type="image/x-icon">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Contrail+One&display=swap" rel="stylesheet">
+{% endblock %}
+{% block main %}
+<div class="contenedor" id="formContainer">
+    <form id="mainForm" action="/login/register" method="post">
+        <input type="text" id="usuario" name="name" placeholder="Ingresa tu nombre" required>
+        <input type="email" id="email" name="email" placeholder="Ingresa tu correo" required>
+        <input type="password" id="contraseña" name="pass" placeholder="Ingresa tu contraseña" required>
+        <section class="mostrar">
+            <label class="lbel" for="checkbox">Mostrar contraseña</label>
+            <input type="checkbox" id="checkbox" name="checkbox">
+        </section>
+        <input type="submit" class="submit">
+        <hr>
+        <section class="botones">
+            <a href="/iniciar_sesion" class="btn" id="loginBtnFromLogin">Login</a>
+            <a href="/login" class="btn" id="registerBtnFromLogin">Register</a>
+        </section>
+    </form>
+</div>
+{% endblock %}
