--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -3,6 +3,8 @@
 Usuario
 {% endblock %}
 {% block head %}
+<link rel="stylesheet" href="{{url_for('static', filename='style/nav_style.css')}}" />
+
 {% endblock %}
 {% block main %}
 {% endblock %}
