--- a/app/templates/sin_sesion.html
+++ b/app/templates/sin_sesion.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block title %}
-Inicio
+Sin sesión
 {% endblock %}
 {% block head %}
 <link rel="stylesheet" href="{{url_for('static', filename = 'style/style.css')}}" />
+<link rel="stylesheet" href="{{url_for('static', filename = 'style/style_not_sesion.css')}}" />
+
 <link rel="shortcut icon" href="app/auth/templates/favicon.icofavicon.ico" type="image/x-icon">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,30 +17,15 @@ Inicio
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Contrail+One&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="{{url_for('static', filename = 'style/style_app.css')}}" />
+{% endblock head %}
 
-
-{% endblock %}
 {% block main %}
-<section>
-    <article>
-        <div class="video-container">
-            {% if url_for('video') %}
-            <img id="videoPlayer" src="{{ url_for('video') }}" alt="Video" width="80%">
-            {% else %}
-            <p>No hay video disponible. Agrega un video.</p>
-            {% endif %}
-        </div>
-        <form action="/upload_video" method="post" enctype="multipart/form-data" class="add_video">
-            <input type="file" name="video" accept="video/*" id="videoUrl">
-            <button type="submit" class="insert">Subir video</button>
-        </form>
 
-        <h3>Datos del Video</h3>
-        {% block table %}
-        {% include "table.html" %}
-        {% endblock table %}
+<section id="sesion_non">
+    <h1>Inicia sesión antes de usar la aplicación.</h1>
+    <article id="article_no_sesion">
+        <a href="/login">Registrarse</a>
+        <a href="/iniciar_sesion">Iniciar sesión</a>
     </article>
 </section>
-
 {% endblock %}
