--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -26,12 +26,12 @@ Usuario
         <img src="{{ url_for('static', filename='img/User_gris.png') }}" alt="Usuario_Gris">
     </article>
     <article class="separador">
-        <h1>User_Name: <span>{{name}}</span></h1>
-        <h1>User_ID: <span>{{id}}</span></h1>
+        <p>User_Name: <span>{{name}}</span></p>
+        <p>User_ID: <span>{{id}}</span></p>
     </article>
     <article class="separador">
-        <h1>User_Email: <span>{{email}}</span></h1>
-        <h1>User: <span>ect...</span></h1>
+        <p>User_Email: <span>{{email}}</span></p>
+        <p>User: <span>ect...</span></p>
     </article>
 </section>
 <hr style="border: 1px solid white; width: 100%;">
